2007-12-05 Jim Sack <jgsack@san.rr.com>
	* src/GrampsDbUtils/_WriteGedcom.py : add omitted () to function call
	fixes type error 'instancemethod' object is not iterable
	reported by RJ in -devel list

2007-12-04 Benny Malengier <benny.malengier@gramps-project.org>
	* src/gen/proxy/proxybase.py: remove unneeded assign

2007-12-04 Benny Malengier <benny.malengier@gramps-project.org>
	* src/gen/proxy/proxybase.py: add mediapath get
	* src/gen/proxy/dbbase.py: add mediapath methods

2007-12-03  Douglas S.Blank  <dblank@cs.brynmawr.edu>
	* src/plugins/CalculateEstimatedDates.py: Refinements, use results tab
	* src/PluginUtils/_PluginWindows.py: Tool support for a results tab

2007-12-02  Douglas S.Blank  <dblank@cs.brynmawr.edu>
	* src/gen/lib/date.py: added new method copy_ymd()
	* src/plugins/CalculateEstimatedDates.py: new tool based on 
	  MenuOptions: calculates estimated dates
	* src/PluginUtils/_PluginWindows.py: refactoring, cleanup

2007-12-01  Douglas S.Blank  <dblank@cs.brynmawr.edu>
	* src/Editors/_EditFamily.py: fixed issues with latin american 
	surname guessing

2007-11-30  Alex Roitman  <shura@gramps-project.org>
	* data/grampsxml.dtd: Add region to objref.
	* data/grampsxml.rng: Add region to objref.

2007-11-30 Benny Malengier <benny.malengier@gramps-project.org>
	* src/GrampsCfg.py: rel media path entry box
	* src/gen/db/base.py: methods for access
	* src/gen/db/dbdir.py: storage in BSDDB
	* src/GrampsDb/_GrampsDbWriteXML.py: write in header
	* src/GrampsDbUtils/_ReadXML.py: read relative path
	Start of adding relative media path to database

2007-11-29  Dougas S. Blank  <dblank@cs.brynmawr.edu>
	* src/Editors/_EditFamily.py: reverse surname guess for father

2007-11-29  Douglas S.Blank  <dblank@cs.brynmawr.edu>
	* src/ReportBase/__init__.py: import MenuReportOptions
	* src/ReportBase/_ReportOptions.py: import MenuOptions and
	  define MenuReportOptions
	* src/plugins/Calendar.py: get MenuReportOptions from ReportOptions