@@ -1,3 +1,9 @@
+2007-12-05  Douglas S.Blank  <dblank@cs.brynmawr.edu>
+	* src/plugins/CalculateEstimatedDates.py: set quality CALCULATED on
+	  added dates
+	* src/PluginUtils/_PluginWindows.py: buttons are now Close and Apply
+	* src/PluginUtils/_MenuOptions.py: 2 bugs: xml load; help/dict typo
+
 2007-12-05 Jim Sack <jgsack@san.rr.com>
 	* src/GrampsDbUtils/_WriteGedcom.py : add omitted () to function call
 	fixes type error 'instancemethod' object is not iterable
